result analysis update

--- a/ModelTraining.ipynb
+++ b/ModelTraining.ipynb
@@ -10,6 +10,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b776344",
+   "metadata": {},
+   "source": [
+    "Run Using python 3.11"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "09ea3725",
@@ -413,7 +421,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6525ae61a084929a4c500e6df0dd695",
+       "model_id": "8c4043de64ba40f2a10fc2749744417b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -446,7 +454,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2aecc13761049c3ac6b9bd1f33371ff",
+       "model_id": "430b9029cd7b44e9ad631b9c6896b2d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1249,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "9f77c823",
    "metadata": {},
    "outputs": [],
@@ -1259,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "ec7c2f6c",
    "metadata": {},
    "outputs": [],
@@ -1273,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "6f5fe974",
    "metadata": {},
    "outputs": [],
@@ -1283,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "38603214",
    "metadata": {},
    "outputs": [],
@@ -1298,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "8277a23e",
    "metadata": {},
    "outputs": [
@@ -1321,7 +1329,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 346ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 314ms/step\n",
       "model prediction is  fear\n"
      ]
     }
@@ -1337,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "fe743b1e",
    "metadata": {},
    "outputs": [
@@ -1377,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "7a884eeb",
    "metadata": {},
    "outputs": [
@@ -1386,17 +1394,17 @@
      "output_type": "stream",
      "text": [
       "original image is of fear\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 126ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 46ms/step\n",
       "model prediction is  fear\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x22fd24d5710>"
+       "<matplotlib.image.AxesImage at 0x1da31d2b6d0>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1419,6 +1427,67 @@
     "pred_label = label[pred.argmax()]\n",
     "print(\"model prediction is \",pred_label)\n",
     "plt.imshow(img.reshape(48,48),cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30de4892",
+   "metadata": {},
+   "source": [
+    "Result Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "46737695",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m221/221\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 53ms/step\n",
+      "F1 Score (macro): 0.6220776778895617\n",
+      "F1 Score (micro): 0.6347296914803283\n",
+      "F1 Score (weighted): 0.6308855957348177\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       Angry       0.56      0.55      0.55       960\n",
+      "     Disgust       0.83      0.57      0.67       111\n",
+      "        Fear       0.52      0.41      0.46      1018\n",
+      "       Happy       0.79      0.86      0.82      1825\n",
+      "     Neutral       0.56      0.58      0.57      1216\n",
+      "         Sad       0.49      0.52      0.51      1139\n",
+      "    Surprise       0.77      0.77      0.77       797\n",
+      "\n",
+      "    accuracy                           0.63      7066\n",
+      "   macro avg       0.65      0.61      0.62      7066\n",
+      "weighted avg       0.63      0.63      0.63      7066\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred_probs = model.predict(x_test)\n",
+    "y_pred = np.argmax(y_pred_probs, axis=1)\n",
+    "\n",
+    "# Convert categorical y_test back to integer labels\n",
+    "y_test_int = np.argmax(y_test, axis=1)\n",
+    "\n",
+    "# F1 Score (macro, micro, weighted)\n",
+    "f1_macro = f1_score(y_test_int, y_pred, average='macro')\n",
+    "f1_micro = f1_score(y_test_int, y_pred, average='micro')\n",
+    "f1_weighted = f1_score(y_test_int, y_pred, average='weighted')\n",
+    "\n",
+    "print(\"F1 Score (macro):\", f1_macro)\n",
+    "print(\"F1 Score (micro):\", f1_micro)\n",
+    "print(\"F1 Score (weighted):\", f1_weighted)\n",
+    "\n",
+    "# Detailed classification report\n",
+    "print(classification_report(y_test_int, y_pred, target_names=[\n",
+    "    'Angry', 'Disgust', 'Fear', 'Happy', 'Neutral', 'Sad', 'Surprise'\n",
+    "]))"
    ]
   }
  ],
